--- a/ExemploPalette/app/src/main/res/layout/activity_main.xml
+++ b/ExemploPalette/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="br.com.s2mobile.exemplopalette.MainActivity">
+    tools:context="br.com.luizmarcus.exemplopalette.MainActivity">
 
     <ImageView
         android:id="@+id/img"
